Fix default spacing bug

--- a/playbook/app/pb_kits/playbook/pb_text_input/_text_input.scss
+++ b/playbook/app/pb_kits/playbook/pb_text_input/_text_input.scss
@@ -10,7 +10,6 @@
   }
 
   .text_input_wrapper {
-    margin-bottom: $space_sm;
     display: block;
 
     input::placeholder,
@@ -33,6 +32,10 @@
       -webkit-box-shadow: 0 0 0px 1000px $focus_input_light inset;
       transition: background-color 5000s ease-in-out 0s;
     }
+  }
+
+  &.default_mb_sm {
+    margin-bottom: $space_sm;
   }
 
   &.dark {
